# mfm-go

./: BUILD  BUILD.bazel  README.md  atom.go  go.mod  groups  install.sh  project.config  release.sh  sim.go  site.go  win.go
atom/: BUILD  BUILD.bazel  dreg.go  fern.go  fork.go  fox.go  germ.go  herbasaur.go  ioutil.go  paper.go  rabbit.go  res.go  rock.go  scissors.go  sentry.go  tree.go
bench/: BUILD.bazel  bench_test.go
hook/: BUILD  BUILD.bazel  stat.go  term.go
mfmgo/: BUILD.bazel  main.go
mfmgoh/: BUILD.bazel  main.go
rand/: BUILD.bazel  rand.go
