load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "ajz_xyz/experimental/computation/mfm-go/mfmgoh",
    visibility = ["//visibility:private"],
    deps = [
        "//experimental/computation/mfm-go:go_default_library",
        "//experimental/computation/mfm-go/atom:go_default_library",
        "//experimental/computation/mfm-go/hook:go_default_library",
    ],
)

go_binary(
    name = "mfmgoh",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
